ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test127
spec: {}
status: {}
